<resources>
    <string name="app_name">PalindromeApp</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name: %1$s</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="hint_name">Bjorka Coy</string>
    <string name="selected_user">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
</resources>